<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adrian.goodstart.activity.SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"/>
            <Spinner
                android:id="@+id/spinner_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_pwd"/>
            <EditText
                android:id="@+id/et_dev_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_conn_dev"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:layout_span="2"
                android:text="@string/conn_dev"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name"/>
            <Spinner
                android:id="@+id/spinner_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_pwd"/>
            <EditText
                android:id="@+id/et_wifi_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_dev_conn_wifi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:layout_span="2"
                android:text="@string/dev_conn_wifi"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
